src/strucvars/eval/del/snapshots/scarus__strucvars__eval__del__section2__test__evaluate@ISCA-46303-2A-pos.snap
---
source: src/strucvars/eval/del/section2.rs
expression: res
---
- l2:
    l2_a:
      suggested_score: 1
      hi_genes: []
      hi_regions:
        - isca_id: ISCA-46303
          isca_region_name: SOX9 upstream enhancer region
          genomic_location: "17:67892996-69792434"
          haploinsufficiency_score: sufficient_evidence
          triplosensitivity_score: little_evidence
          haploinsufficiency_disease_id: "MONDO:0007134"
          triplosensitivity_disease_id: "MONDO:0009869"

