src/strucvars/eval/del/snapshots/scarus__strucvars__eval__del__section2__test__evaluate@ISCA-46311-2F-pos.snap
---
source: src/strucvars/eval/del/section2.rs
expression: res
---
- l2:
    l2f:
      suggested_score: -1
      benign_regions:
        - iscaId: ISCA-46311
          iscaRegionName: 1p36.21 population region (gnomAD-SV_v2.1_DEL_1_1094)
          genomicLocation: "chr1:12929369-12939070"
          haploinsufficiencyScore: CLINGEN_DOSAGE_SCORE_UNLIKELY
          triplosensitivityScore: CLINGEN_DOSAGE_SCORE_NO_EVIDENCE_AVAILABLE

