src/strucvars/eval/del/snapshots/scarus__strucvars__eval__del__section2__test__evaluate@ISCA-46311-2G-pos-1.snap
---
source: src/strucvars/eval/del/section2.rs
expression: res
---
- l2:
    l2_g:
      suggested_score: 0
      benign_regions:
        - isca_id: ISCA-46311
          isca_region_name: 1p36.21 population region (gnomAD-SV_v2.1_DEL_1_1094)
          genomic_location: "1:12989199-12998900"
          haploinsufficiency_score: dosage_sensitivity_unlikely
          triplosensitivity_score: no_evidence_available
          haploinsufficiency_disease_id: ~
          triplosensitivity_disease_id: ~

