src/strucvars/eval/del/snapshots/scarus__strucvars__eval__del__section2__test__get_gene_hi_predictions-2.snap
---
source: src/strucvars/eval/del/section2.rs
expression: res_rere
---
gene:
  hgnc_id: "HGNC:9965"
  hgnc_symbol: RERE
  ensembl_gene_id: ENSG00000142599
  ncbi_gene_id: "473"
results:
  - decipher_hi_index:
      hi_index: 1.92
  - gnomad_pli:
      pli_score: 1
      oe_lof_upper: 0.12

