src/strucvars/eval/del/snapshots/scarus__strucvars__eval__del__section2__test__handle_case_2a@COL3A1-2A-pos.snap
---
source: src/strucvars/eval/del/section2.rs
expression: res
---
- L2:
    L2A:
      suggested_score: 1
      hi_genes:
        - gene_symbol: COL3A1
          ncbi_gene_id: "1281"
          genomic_location: "2:189839099-189877472"
          haploinsufficiency_score: SufficientEvidence
          triplosensitivity_score: NoEvidenceAvailable
          haploinsufficiency_disease_id: "MONDO:0007524"
          triplosensitivity_disease_id: ~
      hi_regions: []

